Use '--enable-preview' flag if preset in Maven compiler plugin
Fixes #102